<resources>
    <string name="app_name">mSecSales</string>
    <string name="str_copy_rights">Copyright &#169; 2016 Arteria. All rights reserved.</string>
    <string name="app_loading">Loading... </string>
    <string name="host">172.25.12.48</string>
    <string name="port">8080</string>
    <string name="clientValue">001</string>
    <string name="applicationIDText">mSFA</string>
    <string name="securityConfigText">mSFA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="Q1">What is the Size(Area)of the Store/Outlet?</string>
    <string name="Q2">What is the Format of the Store/Outlet?</string>
    <string name="Q3">How Many Manpower the Store/Outlet?</string>
    <string name="Q4">What are the working Hours of the Store/Outlet?</string>
    <string name="Q5">Does the Store/Outlet Provide Home Delivery</string>
    <string name="Q6">Does the Store/Outlet Take Order on Phone?</string>
    <string name="Q7">Does the Store/Outlet have computer based billing system?</string>
    <string name="Q8">How Many Checkout counter are there in Store/outlet?</string>
    <string name="Q9">What is the location of the Store/outlet?</string>
    <string name="Q10">Is there any hospital nearby?</string>
    <string name="Q11">Is there any School/College/University nearby?</string>
    <string name="Q12">How many window display are there in Store/Outlet?</string>
    <string name="Q13">Does the Store/outlet Carry below categorie?</string>
    <string name="Q14">Does the Store/Outlet have Smart Phone?</string>
    <string name="project_title">mSecSales</string>
    <string name="registration">Registration</string>
    <string name="uName">User Name</string>
    <string name="star">*</string>
    <string name="st">:</string>
    <string name="password">Password</string>
    <string name="serverHost">Server Host</string>
    <string name="client">Client</string>
    <string name="applicationID">Application ID</string>
    <string name="securityConfig">Security Config</string>
    <string name="showPassword">Show Password</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="aboutUs">About Us</string>
    <string name="auto_sync">Auto Sync :</string>
    <string name="serverPort">Server Port</string>
    <string name="syncmenu">Sync Menu</string>
    <string name="registerationheader">mSFA</string>
    <string name="_data_data_">/data/data/</string>
    <string name="uao_3_activations_rs_300_rechagre_month_">UAO(>3 Activations &amp; Rs 300 recharge/ month)</string>
    <string name="no_req_to_update_sap">No pending requests to update SAP</string>
    <string name="no_req_to_update_merchant">No pending requests to update Merchant</string>
    <string name="error_occured_during_get_image">Media download failed</string>
    <string name="credit_note_menu">Incentive</string>
    <string name="register_with_server_plz_wait">Registering with server, please wait&#8230;</string>
    <string name="reterving_with_service_document">Retrieving service document&#8230;</string>
    <string name="reterving_with_meta_document">Retrieving metadata&#8230;</string>
    <string name="error_while_meta_document">Error while retrieving metadata.</string>
    <string name="error_while_service_document">Error while retrieving service document.</string>
    <string name="sync_progress_msg">Synchronization in Progress</string>
    <string name="alert_enter_atlest_one_material">Enter quantity for atleast one CRS SKU Group</string>
    <string name="all_must_sell_qty_should_be_entered">All Must sell sku qty should be entered</string>
    <string name="msg_update_end">Updating end, please wait</string>
    <string name="msg_update_non_visted_retilers">Updating day end and non visited retailers remarks to server, please wait</string>
    <string name="title_sample_disbursement">Sample Disbursement</string>
    <string name="lbl_brand">Brand</string>
    <string name="msg_secondary_so_created">Sales Order created</string>
    <string name="msg_inv_created">Secondary Invoice created</string>
    <string name="msg_return_order_created">Return Order created</string>
    <string name="msg_material_batch_already_exists">Material Batch already exists</string>
    <string name="msg_sample_disbursement_created">Sample Disbursement created</string>
    <string name="msg_customer_complaints_created">Complaint created</string>
    <string name="msg_customer_complaints_failed_created">Complaints created failed</string>
    <string name="alert_sync_is_progress">Sync is in progress.Sync cannot be performed now</string>
    <string name="sync_terminated_data_conn_lost">Sync : Sync terminated as data connectivity was lost</string>
    <string name="records_sync_successfully">records  synchronized successfully</string>
    <string name="sync_successfully">Synchronization completed</string>
    <string name="sync_successfully_completed">Synchronization successfully completed.</string>
    <string name="do_want_cancel_sync">Do you want to cancel synchronisation?</string>
    <string name="view_log">View Log</string>
    <string name="error_occured_during_sync">Error occurred while Synchronizing, Please check the log.</string>
    <string name="do_u_want_exit">Do you want to exit?</string>
    <string name="do_u_want_exit_inv_create">Do you want to exit from Sales Order Create?</string>
    <string name="do_u_want_exit_return_materials">Do you want to exit from Returns?</string>
    <string name="do_u_want_exit_collection_create">Do you want to exit from Collection?</string>
    <string name="do_u_want_exit_cef">Do you want to exit from CEF?</string>
    <string name="do_u_want_exit_img_capture">Do you want to exit from Image Capture?</string>
    <string name="do_u_want_exit_rela_call">Do you want to exit from RelationShip Call?</string>
    <string name="do_u_want_exit_business_call">Do you want to exit from Business Call?</string>
    <string name="do_u_want_exit_shade_card">Do you want to exit from Shared Card?</string>
    <string name="do_u_want_exit_customer_compliants">Do you want to exit from Complaints?</string>
    <string name="do_u_want_exit_dealer_stock">Do you want to exit from Dealer Stock?</string>
    <string name="do_u_want_exit_cometitor_stock">Do you want to exit from Competitor Stock Entry?</string>
    <string name="complete_sync_in_prog">Completed, Synchronization in Progress.</string>
    <string name="success">success</string>
    <string name="plz_select_one_coll">Please select atleast one collection.</string>
    <string name="beat_plan">Route plan on -</string>
    <string name="top_dealer_list">Top Dealer List</string>
    <string name="painter_dealer_list">Painter List</string>
    <string name="do_u_want_start">Do you want to start?</string>
    <string name="do_u_want_enter_qty_or_range">Do you want to enter quantity or range?</string>
    <string name="do_u_want_select_full_or_partial">Do you want to select full or partial?</string>
    <string name="do_u_want_exit_app">Do you want to exit from the Application?</string>
    <string name="do_u_want_reset_app">Do you want to Reset the Application?</string>
    <string name="export_device_log_to_device">Exporting device log to device, Please wait&#8230;</string>
    <string name="export_device_log_to_device_finish">Device log is export to SD card. Please send the file to support team.</string>
    <string name="crash_log_to_sdcard_finish">Crash log is export to SD card. Please send the file to support team.</string>
    <string name="export_datavault_data_to_storage">Exporting pending data to device storage, Please wait&#8230;</string>
    <string name="export_databse_to_sdcard">Exporting DB to device storage, Please wait&#8230;</string>
    <string name="import_databse_from_sdcard">Importing DB from device storage, Please wait&#8230;</string>
    <string name="import_datavault_data_from_sdcard">Importing pending data from device storage, Please wait&#8230;</string>
    <string name="export_databse_to_sdcard_finish">DB exported to device storage successfully.</string>
    <string name="export_datavault_to_sdcard_finish">Pending data exported to device storage successfully.</string>
    <string name="import_databse_from_sdcard_finish">DB imported from device storage successfully.</string>
    <string name="import_datavault_from_sdcard_finish">Pending data imported from device storage successfully.</string>
    <string name="export_databse_to_sdcard_error_occurred">Error occurred while exporting DB to device storage.</string>
    <string name="export_datavault_to_sdcard_error_occurred">Error occurred while exporting data to device storage.</string>
    <string name="import_databse_from_sdcard_error_occurred">Error occurred while importing DB from device storage.</string>
    <string name="import_datavault_from_sdcard_error_occurred">Error occurred while importing pending data from device storage.</string>
    <string name="file_not_exist">No file to import</string>
    <string name="cef_created_success">CEF has been created successfully.</string>
    <string name="snap_created_success">Snapshot saved successfully.</string>
    <string name="take_pic">Take a picture.</string>
    <string name="dialog_day_ended">Day ended</string>
    <string name="dialog_day_started">Day started</string>
    <string name="dialog_day_reset">Day end reset done</string>
    <string name="tv_complete">Day Completed</string>
    <string name="tv_end">End Day</string>
    <string name="tv_start">Start Day</string>
    <string name="tv_visit_start">Visit Started</string>
    <string name="alert_user_is_locked">User is locked.Please reset password</string>
    <string name="tv_visit">Visit</string>
    <string name="lbl_sample_quantity">Sample Quantity</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_sample_disbursement_create">Sample Disbursement</string>
    <string name="log_menu">Log</string>
    <string name="title_retailer_trends">Trend</string>
    <string name="export_datavault_data_menu">Export Data</string>
    <string name="import_datavault_data_menu">Import Data</string>
    <string name="logout_menu">Re-Register</string>
    <string name="export_menu">Export</string>
    <string name="export_device_log_menu">Export Crash Log</string>
    <string name="import_menu">Import</string>
    <string name="aboutus_menu">About Us</string>
    <string name="update_pwd_menu">Update Password</string>
    <string name="init_db_menu">Initialize DB</string>
    <string name="mat_rate">MRP</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="available">Available</string>
    <string name="available_sno">Available Serial Numbers</string>
    <string name="lbl_no_records_found"> No records found </string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_material">Material</string>
    <string name="lbl_mat_code">Code</string>
    <string name="lbl_lmtd">LMTD</string>
    <string name="lbl_mtd">MTD</string>
    <string name="lbl_gr">GR%</string>
    <string name="lbl_m1">M1</string>
    <string name="lbl_m2">M2</string>
    <string name="lbl_m3">M3</string>
    <string name="lbl_soq">SOQ</string>
    <string name="lbl_ord_qty">Ord Qty</string>
    <string name="lbl_db_stock">DB STK</string>
    <string name="lbl_rl_stock">RL STK</string>
    <string name="lbl_batch_number">Batch Number</string>
    <string name="lbl_Search_by_SKU_Desc">Search by SKU Description</string>
    <string name="lbl_sku_desc">SKU Description</string>
    <string name="lbl_order_reason">Order Reason</string>
    <string name="lbl_MRP">MRP</string>
    <string name="change_pwd_menu">Change Password</string>
</resources>