<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="@dimen/padding_four_dip"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:paddingLeft="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sku_desc"

                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:id="@+id/tv_list_skudesc" />
            <TextView
                android:paddingLeft="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_order_reason"

                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:id="@+id/tv_list_order_reason" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="@dimen/padding_four_dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_quantity"
                android:layout_marginLeft="@dimen/margin_four_dip"

                android:gravity="left"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:id="@+id/tv_list_quantity" />
            <TextView
                android:paddingLeft="@dimen/padding_four_dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_batch_number"
                android:layout_marginLeft="@dimen/margin_four_dip"

                android:gravity="left"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:id="@+id/tv_list_batch" />
        </LinearLayout>





        <TextView
            android:paddingLeft="@dimen/padding_four_dip"
            android:layout_weight="0.5"
            android:layout_width="@dimen/width_zero_dip"
            android:layout_height="wrap_content"
            android:text="@string/lbl_MRP"
            android:layout_marginLeft="@dimen/margin_four_dip"

            android:gravity="center"
            android:textColor="@color/header_tile_text_color"
            android:textSize="@dimen/medium_text"
            android:id="@+id/tv_list_mrp" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_one_dip"
        android:background="@color/BLACK">
    </LinearLayout>
</LinearLayout>